--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="apple-touch-icon" href="/icon-192.png" />
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="青岛云归谷科技有限公司专注于能源管理与碳减排技术，提供AI驱动的能源管理系统、能碳管理系统及AI场景优化解决方案，助力企业实现数字化转型和碳中和目标。服务涵盖制造业、商业地产、工业园区、数据中心等多个行业。">
+  <meta name="description" content="青岛云归谷科技有限公司专注于能源管理与碳减排技术，提供AI驱动的能源管理系统、能碳管理系统及AI场景优化解决方案,助力企业实现数字化转型和碳中和目标。服务涵盖制造业、商业地产、工业园区、数据中心等多个行业。">
   <meta name="keywords" content="青岛云归谷科技, 能源管理, 碳减排, AI优化, 能源管理系统, 能碳管理, 数字化转型, 碳中和, 智能制造, 绿色能源, 可持续发展, 碳排放管理, 能源效率, 工业4.0">
   <meta name="author" content="青岛云归谷科技有限公司">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -33,7 +33,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta property="og:title" content="青岛云归谷科技有限公司 - 云智能源 · 数碳未来">
-  <meta property="og:description" content="AI驱动的能源管理与碳足迹全链路解决方案提供商，助力企业实现数字化转型和碳中和目标">
+  <meta property="og:description" content="AI驱动的能源管理与碳足迹全链路解决方案提供商,助力企业实现数字化转型和碳中和目标">
   <meta property="og:image" content="/og-image.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -120,4 +120,5 @@
   <noscript>您需要启用JavaScript才能运行此应用程序。</noscript>
   <div id="root"></div>
 </body>
+
 </html>
